--- a/Pastures/Views/Maps/Wells.cshtml
+++ b/Pastures/Views/Maps/Wells.cshtml
@@ -404,7 +404,7 @@
 <script>
     $("#maindiv").LoadingOverlay("show");
 
-    var WWW = window.location.hostname;
+    var WWW = '@ViewBag.geoserverURL';
 
     var dialog_info_wellspnt_first = true;
     var dialog_info_wellspol_first = true;
@@ -421,7 +421,7 @@
 
     //// источник данных и слой дорог, населенных пунктов, водоемов
     //var Source_base2 = new ol.source.ImageWMS({
-    //    url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+    //    url: WWW + 'Pastures/wms?',
     //    params: {
     //        'LAYERS': 'Pastures:base2',
     //        'VERSION': '1.1.0',
@@ -438,7 +438,7 @@
 
     // источник данных и слой wellspol0
     var Source_wellspol0 = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:wellspol0',
             'VERSION': '1.1.0',
@@ -454,7 +454,7 @@
 
     // источник данных и слой Гидрография (линии)
     var Source_hdrlin = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:hdrlin',
             'VERSION': '1.1.0',
@@ -470,7 +470,7 @@
 
     // источник данных и слой Гидрография (полигоны)
     var Source_hdrpol = new ol.source.ImageWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:hdrpol',
             'VERSION': '1.1.0',
@@ -486,7 +486,7 @@
 
     // источник данных и слой Населённые пункты (точки)
     var Source_poppnt = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:poppnt',
             'VERSION': '1.1.0',
@@ -502,7 +502,7 @@
 
     // источник данных и слой Населённые пункты (полигоны)
     var Source_poppol = new ol.source.ImageWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:poppol',
             'VERSION': '1.1.0',
@@ -518,7 +518,7 @@
 
     // источник данных и слой Автодороги и пути (линии)
     var Source_rdslin = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:rdslin',
             'VERSION': '1.1.0',
@@ -534,7 +534,7 @@
 
     // источник данных и слой adm123pol
     var Source_adm123pol = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:adm123pol',
             'VERSION': '1.1.0',
@@ -565,7 +565,7 @@
 
     // источник данных и слой wellspnt
     var Source_wellspnt = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:wellspnt',
             'VERSION': '1.1.0',
@@ -617,7 +617,7 @@
 
     // источник данных и слой wellspol
     var Source_wellspol = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:wellspol',
             'VERSION': '1.1.0',
@@ -655,7 +655,7 @@
     // векторный слой сельских округов (не отображается на карте)
     var Layer_adm3pol_v = new ol.layer.Vector();
     // векторный слой водоисточников
-    var url_wellspnt_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:wellspnt&outputFormat=text/javascript&format_options=callback:getJson";
+    var url_wellspnt_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:wellspnt&outputFormat=text/javascript&format_options=callback:getJson";
     $.ajax({
         jsonp: false,
         jsonpCallback: 'getJson',
@@ -672,7 +672,7 @@
                 })
             });
             // векторный слой областей
-            var url_adm1pol_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm1pol&outputFormat=text/javascript&format_options=callback:getJson";
+            var url_adm1pol_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm1pol&outputFormat=text/javascript&format_options=callback:getJson";
             $.ajax({
                 jsonp: false,
                 jsonpCallback: 'getJson',
@@ -689,7 +689,7 @@
                         })
                     });
                     // векторный слой районов
-                    var url_adm2pol_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm2pol&outputFormat=text/javascript&format_options=callback:getJson";
+                    var url_adm2pol_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm2pol&outputFormat=text/javascript&format_options=callback:getJson";
                     $.ajax({
                         jsonp: false,
                         jsonpCallback: 'getJson',
@@ -706,7 +706,7 @@
                                 })
                             });
                             // векторный слой сельских округов
-                            var url_adm3pol_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm3pol&outputFormat=text/javascript&format_options=callback:getJson";
+                            var url_adm3pol_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm3pol&outputFormat=text/javascript&format_options=callback:getJson";
                             $.ajax({
                                 jsonp: false,
                                 jsonpCallback: 'getJson',
@@ -1167,12 +1167,6 @@
     function ChangeMapSource(val) {
         if (val == 'OpenStreetMap') {
             var Source = new ol.source.OSM({});
-            Layer_Base.setSource(Source);
-        }
-        if (val == 'OpenCycleMap') {
-            var Source = new ol.source.OSM({
-                url: 'http://{a-c}.tile.opencyclemap.org/cycle/{z}/{x}/{y}.png'
-            });
             Layer_Base.setSource(Source);
         }
         if (val == 'ArcGIS') {
