--- a/Pastures/Views/Maps/PasturesBurden.cshtml
+++ b/Pastures/Views/Maps/PasturesBurden.cshtml
@@ -414,7 +414,7 @@
 <script>
     $("#maindiv").LoadingOverlay("show");
 
-    var WWW = window.location.hostname;
+    var WWW = '@ViewBag.geoserverURL';
 
     var dialog_info_burden_pasture_first = true;
     var dialog_find_burden_pasture_first = true;
@@ -428,7 +428,7 @@
 
     //// источник данных и слой дорог, населенных пунктов, водоемов
     //var Source_base2 = new ol.source.ImageWMS({
-    //    url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+    //    url: WWW + 'Pastures/wms?',
     //    params: {
     //        'LAYERS': 'Pastures:base2',
     //        'VERSION': '1.1.0',
@@ -444,7 +444,7 @@
 
     // источник данных и слой Гидрография (линии)
     var Source_hdrlin = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:hdrlin',
             'VERSION': '1.1.0',
@@ -460,7 +460,7 @@
 
     // источник данных и слой Гидрография (полигоны)
     var Source_hdrpol = new ol.source.ImageWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:hdrpol',
             'VERSION': '1.1.0',
@@ -476,7 +476,7 @@
 
     // источник данных и слой Населённые пункты (точки)
     var Source_poppnt = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:poppnt',
             'VERSION': '1.1.0',
@@ -492,7 +492,7 @@
 
     // источник данных и слой Населённые пункты (полигоны)
     var Source_poppol = new ol.source.ImageWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:poppol',
             'VERSION': '1.1.0',
@@ -508,7 +508,7 @@
 
     // источник данных и слой Автодороги и пути (линии)
     var Source_rdslin = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:rdslin',
             'VERSION': '1.1.0',
@@ -524,7 +524,7 @@
 
     // источник данных и слой adm123pol
     var Source_adm123pol = new ol.source.TileWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:adm123pol',
             'VERSION': '1.1.0',
@@ -555,7 +555,7 @@
 
     // источник данных и слой burden_pasture
     var Source_burden_pasture = new ol.source.ImageWMS({
-        url: 'http://' + WWW + ':8080/geoserver/Pastures/wms?',
+        url: WWW + 'Pastures/wms?',
         params: {
             'LAYERS': 'Pastures:burden_pasture',
             'VERSION': '1.1.0',
@@ -608,7 +608,7 @@
     // векторный слой сельских округов (не отображается на карте)
     var Layer_adm3pol_v = new ol.layer.Vector();
     // векторный слой пастбищ
-    var url_burden_pasture_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:burden_pasture&outputFormat=text/javascript&format_options=callback:getJson";
+    var url_burden_pasture_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:burden_pasture&outputFormat=text/javascript&format_options=callback:getJson";
     $.ajax({
         jsonp: false,
         jsonpCallback: 'getJson',
@@ -625,7 +625,7 @@
                 })
             });
             // векторный слой областей
-            var url_adm1pol_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm1pol&outputFormat=text/javascript&format_options=callback:getJson";
+            var url_adm1pol_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm1pol&outputFormat=text/javascript&format_options=callback:getJson";
             $.ajax({
                 jsonp: false,
                 jsonpCallback: 'getJson',
@@ -642,7 +642,7 @@
                         })
                     });
                     // векторный слой районов
-                    var url_adm2pol_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm2pol&outputFormat=text/javascript&format_options=callback:getJson";
+                    var url_adm2pol_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm2pol&outputFormat=text/javascript&format_options=callback:getJson";
                     $.ajax({
                         jsonp: false,
                         jsonpCallback: 'getJson',
@@ -659,7 +659,7 @@
                                 })
                             });
                             // векторный слой сельских округов
-                            var url_adm3pol_v = "http://" + WWW + ":8080/geoserver/Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm3pol&outputFormat=text/javascript&format_options=callback:getJson";
+                            var url_adm3pol_v = WWW + "Pastures/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Pastures:adm3pol&outputFormat=text/javascript&format_options=callback:getJson";
                             $.ajax({
                                 jsonp: false,
                                 jsonpCallback: 'getJson',
@@ -1037,12 +1037,6 @@
     function ChangeMapSource(val) {
         if (val == 'OpenStreetMap') {
             var Source = new ol.source.OSM({});
-            Layer_Base.setSource(Source);
-        }
-        if (val == 'OpenCycleMap') {
-            var Source = new ol.source.OSM({
-                url: 'http://{a-c}.tile.opencyclemap.org/cycle/{z}/{x}/{y}.png'
-            });
             Layer_Base.setSource(Source);
         }
         if (val == 'ArcGIS') {
